# rust_hardware_monitor

./: Cargo.toml  readme.md
src/: main.rs
src/devices/: devices.rs  mod.rs  sensor_info.rs
src/win_kernel_driver_c/: driver.rs  mod.rs
src/win_ring0_c/: ioctl.rs  mod.rs  runner.rs  winRing0.rs
