[package]
name = "gpu_monitor"
version = "0.1.0"
edition = "2021"
include = ["WinRing0.sys", "WinRing0x64.sys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvml-wrapper = "0.9.0"
nvml-wrapper-sys = "0.7.0"
pretty-bytes = "0.2.0"
systemstat = "0.2.3"
winapi = { version="0.3.8", features = ["fileapi", "ioapiset", "winnt", "handleapi", "errhandlingapi", "std", "winbase", "winioctl"] }
windows-service = "0.2.0"
err-derive = "0.1.5"
console = "0.15.7"
ctrlc = "3.4.1"
